--- a/src/app/items/categories/categories.component.html
+++ b/src/app/items/categories/categories.component.html
@@ -1,10 +1,13 @@
 <div class="header">
     <h4 class="title">Categoria de Produtos
         <a routerLink="create" class="btn btn-success pull-right">
-            <i class="fa fa-plus"></i> Nova
+            <i class="fa fa-plus"></i> Nova Categoria
+        </a>
+        <a routerLink="../" class="btn btn-default pull-right">
+            <i class="fa fa-chevron-left"></i> Voltar
         </a>
     </h4>
-    <p class="category">4 total</p>
+    <p class="category">{{categories.lenth}} categorias</p>
 
 </div>
 <div class="content">
