--- a/src/app/dpt-pdv/orders-pdv/create-order/create-order.component.html
+++ b/src/app/dpt-pdv/orders-pdv/create-order/create-order.component.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="search" [(ngModel)]="search">
+                        <input type="text" class="form-control" name="searchclient" [(ngModel)]="searchClient">
                         <span title="Pesquisar..." class="input-group-addon">
                             <i class="fa fa-search"></i>
                         </span>
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="search" [(ngModel)]="search">
+                        <input type="text" class="form-control" name="searchitem" [(ngModel)]="searchItem">
                         <span title="Pesquisar..." class="input-group-addon">
                             <i class="fa fa-search"></i>
                         </span>
