--- a/src/app/dpt-pdv/orders-pdv/create-order/create-order.component.html
+++ b/src/app/dpt-pdv/orders-pdv/create-order/create-order.component.html
@@ -30,8 +30,9 @@
                 <div class="col-md-12">
                     <h5>Selecione o cliente:</h5>
                     <div class="list-group">
-                        <a (click)="setClient(c)" class="list-group-item" *ngFor="let c of resClients">{{c.name}} <{{ c.cpf }}>
-                            <span class="badge">{{c.email}}</span>
+                        <a (click)="setClient(c)" class="list-group-item" *ngFor="let c of resClients">{{c.name}}
+                            <{{ c.cpf }}>
+                                <span class="badge">{{c.email}}</span>
                         </a>
                     </div>
                 </div>
@@ -45,16 +46,27 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="form-group">
                         <label>Retirada:</label>
                         <input type="date" [min]="today" class="form-control" [(ngModel)]="out" name="out">
                     </div>
                 </div>
-                <div class="col-md-6" *ngIf="out">
+                <div class="col-md-4" *ngIf="out">
                     <div class="form-group">
                         <label>Devolução:</label>
                         <input type="date" [min]="today" (change)="calcDiff()" class="form-control" [(ngModel)]="return" name="return">
+                    </div>
+                </div>
+                <div class="col-md-4" *ngIf="return">
+                    <div class="form-group">
+                        <label for="">Selecione a forma de pagamento:</label>
+                        <select class="form-control" name="payment" [(ngModel)]="payment_method">
+                            <option value="Débito">Débito</option>
+                            <option value="Crédito">Crédito</option>
+                            <option value="Dinheiro">Dinheiro</option>
+                            <option value="Outros">Outros</option>
+                        </select>
                     </div>
                 </div>
             </div>
@@ -132,49 +144,68 @@
             <div class="row">
                 <div class="col-xs-6">
                     <address>
-                        <strong>Cliente:</strong><br>
-                  {{client.id}} # {{client.name}}<br>
-                  {{client.address}}<br>
-                  {{client.complement}}<br>
-                  {{client.city}} / {{client.uf}}<br>
-                  {{client.email}} / {{client.phone}}
-                        </address>
+                        <strong>Cliente:</strong>
+                        <br> {{client.id}} # {{client.name}}
+                        <br> {{client.address}}
+                        <br> {{client.complement}}
+                        <br> {{client.city}} / {{client.uf}}
+                        <br> {{client.email}} / {{client.phone}}
+                    </address>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6">
                     <address>
-                            <strong>Forma de Pagamento:</strong><br>
-                            {{payment_method}}<br>
-                            
-                        </address>
+                        <strong>Forma de Pagamento:</strong>
+                        <br> {{payment_method}}
+                        <br>
+
+                    </address>
                 </div>
                 <div class="col-xs-6 text-right">
                     <address>
-                                <strong>Data de retirada dos itens:</strong><br>
-                                {{out | date: "dd/MM/yyyy"}}<br><br>
-                  <strong>Data de devolução esperada:</strong><br>
-                            {{return | date: "dd/MM/yyyy"}}<br><br>
-                        </address>
+                        <strong>Data de retirada dos itens:</strong>
+                        <br> {{out | date: "dd/MM/yyyy"}}
+                        <br>
+                        <br>
+                        <strong>Data de devolução esperada:</strong>
+                        <br> {{return | date: "dd/MM/yyyy"}}
+                        <br>
+                        <br>
+                    </address>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><strong>Descritivo de itens</strong></h3>
+                            <h3 class="panel-title">
+                                <strong>Descritivo de itens</strong>
+                            </h3>
                         </div>
                         <div class="panel-body">
                             <div class="table-responsive">
                                 <table class="table table-condensed">
                                     <thead>
                                         <tr>
-                                            <td><strong>#</strong></td>
-                                            <td><strong>Item</strong></td>
-                                            <td class="text-center"><strong>Tamanho</strong></td>
-                                            <td class="text-center"><strong>Diária</strong></td>
-                                            <td class="text-center"><strong>Dias</strong></td>
-                                            <td class="text-right"><strong>Total</strong></td>
+                                            <td>
+                                                <strong>#</strong>
+                                            </td>
+                                            <td>
+                                                <strong>Item</strong>
+                                            </td>
+                                            <td class="text-center">
+                                                <strong>Tamanho</strong>
+                                            </td>
+                                            <td class="text-center">
+                                                <strong>Diária</strong>
+                                            </td>
+                                            <td class="text-center">
+                                                <strong>Dias</strong>
+                                            </td>
+                                            <td class="text-right">
+                                                <strong>Total</strong>
+                                            </td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -182,7 +213,8 @@
                                         <tr *ngFor="let i of itens">
                                             <td>
                                                 <a href="javascript:void(0)" class="text-danger" (click)="rmItem(i)">
-                                                    <i class="fa fa-trash-o"></i></a> {{i.code}}
+                                                    <i class="fa fa-trash-o"></i>
+                                                </a> {{i.code}}
                                             </td>
                                             <td>{{i.label}}</td>
                                             <td class="text-center">{{i.size}}</td>
@@ -196,7 +228,9 @@
                                             <td class="thick-line"></td>
                                             <td class="thick-line"></td>
                                             <td class="thick-line"></td>
-                                            <td class="thick-line text-center"><strong>Subtotal</strong></td>
+                                            <td class="thick-line text-center">
+                                                <strong>Subtotal</strong>
+                                            </td>
                                             <td class="thick-line text-right"> {{ subtotal | currency: "BRL"}}</td>
                                         </tr>
                                         <tr>
@@ -204,7 +238,9 @@
                                             <td class="no-line"></td>
                                             <td class="no-line"></td>
                                             <td class="no-line"></td>
-                                            <td class="no-line text-center"><strong>Desconto</strong></td>
+                                            <td class="no-line text-center">
+                                                <strong>Desconto</strong>
+                                            </td>
                                             <td class="text-right">
                                                 <input type="text" name="off" (change)="setTotal()" class="form-control text-right" [(ngModel)]="discount">
                                             </td>
@@ -214,8 +250,12 @@
                                             <td class="no-line"></td>
                                             <td class="no-line"></td>
                                             <td class="no-line"></td>
-                                            <td class="no-line text-center"><strong>Total</strong></td>
-                                            <td class="text-right"><strong>{{ total | currency: "BRL"}}</strong></td>
+                                            <td class="no-line text-center">
+                                                <strong>Total</strong>
+                                            </td>
+                                            <td class="text-right">
+                                                <strong>{{ total | currency: "BRL"}}</strong>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -229,23 +269,7 @@
 
     <div class="card" *ngIf="itens.length > 0">
         <div class="header">
-            <h4 class="title">5 - Forma de Pagamento</h4>
-        </div>
-        <div class="content">
-            <div class="form-group">
-                <label for="">Selecione:</label>
-                <select class="form-control" name="payment" [(ngModel)]="payment_method">
-                    <option value="Débito">Débito</option>
-                    <option value="Crédito">Crédito</option>
-                    <option value="Dinheiro">Dinheiro</option>
-                    <option value="Outros">Outros</option>
-                </select>
-            </div>
-        </div>
-    </div>
-    <div class="card" *ngIf="itens.length > 0">
-        <div class="header">
-            <h4 class="title">6 - Observações</h4>
+            <h4 class="title">5 - Observações</h4>
         </div>
         <div class="content">
             <div class="form-group">
@@ -254,19 +278,15 @@
         </div>
     </div>
 
-
-
-</div>
-
-<div class="row">
-    <div class="col-md-12 text-center">
-        <a routerLink="../" class="btn btn-primary">
-            <i class="fa fa-chevron-left"></i> Voltar
-        </a>
-        <button type="submit" *ngIf="payment_method" class="btn btn-success">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <a routerLink="../" class="btn btn-primary">
+                <i class="fa fa-chevron-left"></i> Voltar
+            </a>
+            <button type="button" (click)="createOrder()" *ngIf="payment_method && subtotal" class="btn btn-success">
                 <i class="fa fa-save"></i> GERAR ORDEM</button>
-        <br><br>
-
+            <br>
+            <br>
+        </div>
     </div>
-
 </div>
