--- a/src/app/orders/view-order/view-order.component.html
+++ b/src/app/orders/view-order/view-order.component.html
@@ -34,7 +34,7 @@
                 <div class="col-xs-6">
                     <address>
     					<strong>Forma de Pagamento:</strong><br>
-    					Online Via UOL PagSeguro<br>
+    					{{ order.payment_method }}<br>
     					
     				</address>
                 </div>
@@ -42,6 +42,8 @@
                     <address>
     					<strong>Data de abertura:</strong><br>
               {{order.created_at | date: "dd/MM/yyyy 'às' H:m:s"}}<br>
+              <strong>Data de saída do(s) item(s):</strong><br>
+              {{order.output | date: "dd/MM/yyyy"}}<br>
               <strong>Data de devolução esperada:</strong><br>
     					{{order.expected_return | date: "dd/MM/yyyy"}}<br><br>
     				</address>
